app/assets/stylesheets/main.css.scss
// #Main Body Content
#main {
	margin-top:1px;
	
	.homepage-top {
		border-bottom:1px solid $grayLighter;
		margin-bottom:$baseline;
	}
	.homepage-bottom { margin:0; padding: 0;}
	
	.events-forum {
		border-left:1px solid $grayLighter;
		padding-left: 20px;
	}
	
	.homepage-lead {
		&.lead-right {
			// Make the first headline bigger in lead-right scheme
			.offleads .span4:first-child .offlead h3.story-headline { @include font-shorthand(bold, 28px, 26px); }
			.lead h1 { @include font-shorthand(600, 24px); }
		}
	}
}

// Trending Bar
.trending {
	border-bottom:1px solid $grayLighter;
	margin-bottom:$baseline;
	padding:4px;
	h6 {
		@include ie-inline-block();
		float:left;
		font-size:13px;
		font-weight:normal;
		line-height:1.8em;
		margin-right:10px;
	}
	ul li {
		@include nav-horiz();
		a {
			color:$grayDark;
			@include font-sans-serif(normal, 12px, 18px);
		}
	}
}

// Broadcast Bar
.broadcast-bar {
	border-top:1px solid $grayBorder;
	border-bottom:1px solid $grayBorder;
	margin-bottom: 25px;
	
	&.with-headshot { 
		margin-top: 15px; // So the host isn't wearing the nav as a tophat
		.program.current .program-info { margin-left: 100px; } // Push the show title link over since we have to absolutely-position the headshot
	}
	
	.bb-inner-container {
		background:$grayBackground;
		border-top:1px solid $white;
		border-bottom:1px solid $white;
		height: 46px;
		display: table; // so the BB extends downwards when the text wraps
		width: 100%;
		
		.sections { display: table; width: 100%;}
	}
	
	a.headshot {
		position: absolute; // Since we have to push it up a bit to extend above the bar, and we don't want any extra space below
		bottom: 0;
		width: 90px;
		height: 70px;
		&:hover { text-decoration: none; }
	}
	
	.program-info {
		a.show-title {
			@include font-heading($weight: 600, $size: 22px);
			text-shadow:1px 1px 0px #fff;
			color:$orangeDark;
			margin-right: 5px; // Leave space for the show time
		}
		
		.show-time {
			@include font-sans-serif($weight:normal, $size:12px);
			color:$gray;
			letter-spacing:-0.15em;
			white-space: nowrap; // Don't want the time getting split up onto different lines
		}
	}
	
	.section {
		display: table-cell;
		width: 50%;
		vertical-align: middle;
		height: 46px;

		.program {
			padding-left: 70px; // Room for the status badge
			background-position: 0 0;
			background-repeat: no-repeat;
			
			&.current {
				float: left;
				background-image: url(image_path("broadcast-bar/onair.png"));
				a.modal-toggler {
					background:url(image_path('broadcast-bar/episode-arrow-invitation.png')) no-repeat right 10px;
					padding-right:15px;
					&:hover {
						background-position:right -34px;
					}
				}
			}
	
			&.next {
				float: right;
				background-image: url(image_path("broadcast-bar/upnext.png"));
			}
		}
	}
	
}

.episode-guide {
	@include font-sans-serif($weight:normal, $size:0.95em);
	color:$grayAlt;
	img {
		float:left;
		width:58px;
		height:58px;
	}
	ul.cbase {
		li {
			display:block;
			list-style-image:url(image_path('mega-divider.png'));
			margin-bottom:$baseline / 2;
			&.lead {
				list-style-image:none;
			}
			&.more {
				margin-bottom:0;
				a {
					background:url(image_path('broadcast-bar/episode-more-icon.png')) no-repeat right 1px;
					font-size:11px;
					padding-bottom:2px;
					padding-right:17px;
				}
			}
			a.comment_link {
				margin-left:0;
			}
		}
		margin-left:80px;
		h4 {
			font-size:18px;
			font-weight:bold;
		}
		h5 {
			font-size:15px;
		}
		p {
			color:$nearBlack;
			font-size:13px;
			line-height:18px;
		}
		.headline {
			@include font-headline(600);
			a {
				color:$nearBlack;
				}
			a.comment_link {
				color:$linkColor;
			}
		}
	}
}


// #broadcast-bar-outer-container {
// 	border-top:1px solid $grayBorder;
// 	border-bottom:1px solid $grayBorder;
// 	margin:3px 0 25px 0;
// 	&.headshot {
// 		margin-top:12px;
// 	}
// }
// #broadcast-bar-inner-container {
// 	background:$grayBackground;
// 	border-top:1px solid $white;
// 	border-bottom:1px solid $white;
// 	height:46px;
// }
//section.broadcastbar {
//	@include clearfix();
//	.current-program {
//	    margin-top: 14px;
//	}
//	.next-program {
//	    margin-top: 14px;
//		text-align: right;
//		white-space: nowrap;
//	}
//	ul {
//		list-style:none outside none;
//		margin:0;
//		li {
//			@include ie-inline-block();
//			&.on-air {
//				position:relative;
//			}
//			&.on-air img {
//				position:absolute;
//				left:0;
//				top:0;
//			}
//			.bbar_headshot {
//			    position: relative;
//			    top: -38px;
//				margin-bottom: -52px;
//				z-index: 0;
//			}
//			&.on-now {
//				float:left;
//				margin:0 0 0 90px;
//				padding:8px 0 0 0;
//			}
//			&.active-show-title {
//				@include font-heading($weight:normal, $size:1.5em);
//				color:$orangeDark;
//				a {
//					color:$orangeDark;
//					font-weight:600;
//					text-shadow:1px 1px 0px #fff;
//					display: inline-block;
//					&.modal-toggler {
//						background:url(image_path('broadcast-bar/episode-arrow-invitation.png')) no-repeat right 10px;
//						padding-right:15px;
//						&:hover {
//							background-position:right -34px;
//						}
//					}
//				}
//			}
//			&.show-status {
//				@include font-sans-serif($weight:bold, $size:1.05em);
//				color:$grayAlt;
//				padding:0 0 0 5px;
//			}
//			&.show-summary {
//				@include font-sans-serif($weight:normal, $size:0.95em);
//				color:$grayAlt;
//				padding:0 0 0 5px;
//				position:relative;
//				.episode-guide {
//					img {
//						float:left;
//						width:58px;
//						height:58px;
//					}
//					ul.cbase {
//						li {
//							display:block;
//							list-style-image:url(image_path('mega-divider.png'));
//							margin-bottom:$baseline / 2;
//							&.lead {
//								list-style-image:none;
//							}
//							&.more {
//								margin-bottom:0;
//								a {
//									background:url(image_path('broadcast-bar/episode-more-icon.png')) no-repeat right 1px;
//									font-size:11px;
//									padding-bottom:2px;
//									padding-right:17px;
//								}
//							}
//							a.comment_link {
//								margin-left:0;
//							}
//						}
//						margin-left:80px;
//						h4 {
//							font-size:18px;
//							font-weight:bold;
//						}
//						h5 {
//							font-size:15px;
//						}
//						p {
//							color:$nearBlack;
//							font-size:13px;
//							line-height:18px;
//						}
//						.headline {
//							@include font-headline(600);
//							a {
//								color:$nearBlack;
//								}
//							a.comment_link {
//								color:$linkColor;
//							}
//						}
//					}
//				}
//			}
//			&.join-conversation {
//				padding:0 0 0 12px;
//				a {
//					@include font-sans-serif($weight:bold, $size:1em);
//					background:url("broadcast-bar/comment-icon.png") no-repeat scroll transparent;	
//					color:$linkColor;
//					padding:0 18px;
//				}
//			}
//			&.up-next img {
//				padding:8px 0 0 60px;
//			}
//			&.upnext-show-title, .upnext-show-title a {	
//				@include font-heading($weight:600, $size:1.5em);
//				color:$orangeDark;
//				text-shadow:1px 1px 0px #fff;
//			}
//			&.show-time {
//				@include font-sans-serif($weight:normal, $size:0.9em);
//				color:$gray;
//				letter-spacing:-0.15em;
//				padding:0 0 0 5px;
//			}
//		}
//	}
//}
.offleads {
	.span4:last-child .offlead {
		border-bottom: none;
	}
	.offlead {
		padding: 0 0 5px 0;
		margin: 0 0 5px 0;
		border-bottom: 1px solid $grayLighter;
	}
}
// Join Conversation
.join-conversation-container {
	margin:10px 0;
	
	&.home {
		border-top: 1px solid $grayLighter;
		border-bottom: 1px solid $grayLighter;
	}
	
	.join_conversation {
		background-color:$grayBackground;

		h6 {
			color:$black;
			padding:5px 0 0 10px;	
		}
		blockquote {
			@include font-serif($size:1.1em, $lineHeight:25px);
			background:url("join-conversation-blockquote.png") no-repeat scroll 2% 50% transparent;		
			border:0 none;
			font-style:italic;
			margin:5px 0 0 0;
			min-height:33px;
			padding:0 25px 0 55px;
		}
		p.quotee {
			@include font-sans-serif($size:0.85em);
			color:$grayLight;
			padding:5px 25px 10px 55px;
			margin: 0;
			a {
				color:$gray;
			}
		}
	}
}

// More Headlines
.headlines {
	ul {
		list-style-image:url("more-headlines-li.png");
		li {
			margin:5px 0 0 -10px;
			a {
				@include font-headline($weight:lighter);
				color:$grayAlt;
				font-size:1.05em;
			}
		}
	}
}

p.more a {
	color:$grayAlt;
	@include font-sans-serif(bold, 11px);
	padding:0;
	margin: 0;
	text-transform:uppercase;
	&:hover {
		text-decoration:underline;
	}
}

.events-forum {
	.event.future {
		@include responsiveImageAsset($thumbW);
	}
}

// Cbase H3 - Applies styling to first headline - activated by jQuery
.first-headline {
	font-size:30px;
	line-height:30px;
}

// More News
h6.more-news-title {
	background:url("section-headline-background.png") repeat-x 0 0;
	@include font-shorthand($size: 18px, $lineHeight: 35px);
	color:$grayAlt;
	padding-left:8px;
	text-transform:none;
	margin-bottom: 10px;
	span {
		@include font-sans-serif($size:12px);
		float:right;
		padding: 7px 8px 0 0;
	}
}

.more-news-container {
	border-right:1px solid $grayLighter;
	padding-right: 10px;
	.more-news {
		padding-bottom: $baseLineHeight / 2;
		&:last-of-type {
			border-bottom: 1px solid $grayLight;
		}
		.more-news-content {
			padding-right:5px;
			border-right:1px solid $grayLighter;
			p.story-title {
				@include font-headline($weight:bold);
				font-size:1.2em;
				margin:0;
				a {
					color:$grayAlt;
				}
			}
			p.story-content {
				@include font-shorthand($size: 13px, $lineHeight: 18px);
				padding:10px 0 0 0;
			}
			ul {
			    margin: 12px 0 0 0;
				list-style: none inside url("more-headlines-li.png");
				li {
					margin:5px 0 0 0;
					a {
						@include font-headline($weight:lighter);
						color:$grayAlt;
						font-size:1.05em;
					}
				}
			}
		}
		div.related-content {
			@include responsiveImageAsset($threeW);
			h6 {
				font-size:0.90em;
				padding:5px 0;
			}
			img.segment {
				padding:10px 0 0 0;
			}
			span.caption {
				@include font-headline($weight:lighter);
				color:$grayAlt;
				display:block;
				font-size:1.1em;
				a {
					color:$grayAlt;
				}
			}
			blockquote {
				@include font-headline($weight:lighter);
				@include font-shorthand($size: 1.5em, $lineHeight: 23px);
				border:0 none;
				font-style:italic;
				margin:10px 0 5px 0;
				padding:0;
			}
			.comments-quotee {
				@include font-sans-serif($size:0.85em);
				background:url("more-news-quotee-icon.png") no-repeat 100px top;
				color:$grayLight;
				height:35px;
				padding:20px 0 0 20px;
			}
		}
	}
}




// Filters bar (please move this to a more appropriate file)
nav.filters {
	background: #f5f5f5;
	border-top: 1px solid #bfbfbf;
	border-bottom: 1px solid #bfbfbf;
	margin: 10px 0;
	padding: 10px;
	@include font-heading($size: 12px, $weight: 600);
	text-transform: uppercase;
	ul { margin:0; }
	li {
		float:left;
		list-style-type:none;
		margin-right:3%;
		&:last-child { margin: 0; }
		&.heading {
			color:#575757;
			margin-right:20px;
			text-transform:none;
		}
		a {
			@include border-radius(3px);
			color: #2e2e2e;
			font-weight:600;
			padding: 3px 5px;
			&:hover, &.active {
				background-color: $gray;
				color: $nearWhite;
				text-shadow: 0 1px #000;
				text-decoration: none;
			}
			&:hover {
				background-color: #9c9c9c;
			}
		}
	}
}

